Bug 1736244 - Add a moz- prefix to classes used in messageBody.css. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D129090

--HG--
extra : rebase_source : 4d3c424a155373cced4b6446761d207de25dd140