mail/extensions/openpgp/content/ui/enigmailMessengerOverlay.js
@@ -1017,7 +1017,7 @@ Enigmail.msg = {
         if (
           node.firstChild &&
           node.firstChild.nodeName.toUpperCase() == "LEGEND" &&
-          node.firstChild.className == "mimeAttachmentHeaderName"
+          node.firstChild.className == "moz-mime-attachment-header-name"
         ) {
           // we reached the area where inline attachments are displayed
           // --> don't try to decrypt displayed inline attachments
